update: filter user of project